--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
     <div class="container">
         <div class="header">
             <h1><i class="fas fa-apple-alt"></i> Apple of Fortune <span class="promo-badge">AIFUT</span></h1>
-            <p>Signallar faqat AIFUT promokod orqali ro'yxatdan o'tgan MegaPari foydalanuvchilari uchun</p>
+            <p>Signallar faqat AIFUT promokod orqali ro'yxatdan o'tgan DBbet foydalanuvchilari uchun</p>
         </div>
         
         <!-- Kirish qismi -->
@@ -664,7 +664,7 @@
             <div class="form-group">
                 <label for="phone-number"><i class="fas fa-phone"></i> Telefon Raqam</label>
                 <div class="input-container">
-                    <input type="tel" id="phone-number" placeholder="Megapari ga ro'yxatdan o'tgan raqam" maxlength="15">
+                    <input type="tel" id="phone-number" placeholder="DBbet ga ro'yxatdan o'tgan raqam" maxlength="15">
                     <div class="error-message" id="phone-error">Telefon raqamni togri kiriting</div>
                     <div class="success-message" id="phone-success">Telefon raqam to'g'ri kiritildi</div>
                 </div>
@@ -675,7 +675,7 @@
         <!-- Signal olish qismi -->
         <div id="signal-section" class="card hidden">
             <div class="signal-info">
-                <i class="fas fa-info-circle"></i> Signallar faqat AIFUT promokod orqali ro'yxatdan o'tgan MegaPari foydalanuvchilari uchun aniq ishlaydi
+                <i class="fas fa-info-circle"></i> Signallar faqat AIFUT promokod orqali ro'yxatdan o'tgan DBbet foydalanuvchilari uchun aniq ishlaydi
             </div>
             <button id="signal-btn" class="btn">Signal Olish</button>
         </div>
@@ -683,7 +683,7 @@
         <!-- O'yin qismi -->
         <div id="game-section" class="card hidden">
             <div class="game-info">
-                <div class="level-indicator">signal for fortune <span id="level">🛰</span></div>
+                <div class="level-indicator">butun olmani tanlang va galaba qiling<span id="level">1851</span></div>
             </div>
             
             <h2 style="text-align: center; margin-bottom: 15px; font-size: 1.3rem;">Apple of Fortune</h2>
@@ -725,7 +725,7 @@
             <div class="loading-spinner">
                 <i class="fas fa-search"></i>
             </div>
-            <div class="loading-text">Signal qidirilmoqda</div>
+            <div class="loading-text">kegingi qator korsatilmoqda</div>
             <div class="loading-subtext"></div>
         </div>
     </div>
